tests/compile_fail/mul/unit_struct.rs
#[derive(derive_more::Mul)]
struct Foo;

fn main() {}
