tests/compile_fail/mul/unit_struct.stderr
error: `Mul` cannot be derived for unit structs
 --> tests/compile_fail/mul/unit_struct.rs:2:1
  |
2 | struct Foo;
  | ^^^^^^
